[fix] Fixes various works boxes alignement.

--- a/css/main.css
+++ b/css/main.css
@@ -311,3 +311,48 @@ section#curriculum > div.container > div.row:first-of-type
     text-align: left;
     padding-left: 75px;
 }
+
+.various-work-box
+{
+    padding: 2em;
+    border-bottom: 1px solid #bbb;
+}
+
+.various-work-box img
+{
+    border-color: #333;
+    background-color: #333;
+}
+
+.various-work-box .image-box
+{
+    width: 10%;
+}
+
+.various-work-box .text-box
+{
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.various-work-box.left-aligned .text-box
+{
+    padding-left: 1em;
+}
+
+.various-work-box.right-aligned .text-box
+{
+    padding-right: 1em;
+}
+
+.various-work-box .vertical-wrapper
+{
+    display: table;
+    height: 110px;
+    width: 90%;
+}
+
+.various-work-box h3
+{
+    margin: 0px 0px 10px 0px;
+}
